# quantum_cellular_automata

./: .gitignore  pyproject.toml
experiments/: _test.py  animation.py  critical_scaling_experiment.py  finite_size_experiment.py  test_experiment.py  time.py
pyqca/: QCAConfig.py  __init__.py
